@@ -72,34 +72,22 @@ for /F "tokens=2 delims=:" %%a in ('mode con') do for %%b in (%%a) do (
      set "BALLERINA_CLI_WIDTH=%%b"
   )
 )
+
+if defined BAL_JAVA_DEBUG goto commandDebug
+
 rem ----- Process the input command -------------------------------------------
-
-rem Slurp the command line arguments. This loop allows for an unlimited number
-rem of arguments (up to the command line limit, anyway).
-
-:setupArgs
-if ""%1""=="""" goto doneStart
-
-if ""%1""==""java.debug""    goto commandDebug
-if ""%1""==""-java.debug""   goto commandDebug
-if ""%1""==""--java.debug""  goto commandDebug
-
-shift
-goto setupArgs
-
+goto doneStart
 
 rem ----- commandDebug ---------------------------------------------------------
 :commandDebug
-shift
-set DEBUG_PORT=%1
-if "%DEBUG_PORT%"=="" goto noDebugPort
-if not "%JAVA_OPTS%"=="" echo Warning !!!. User specified JAVA_OPTS will be ignored, once you give the --java.debug option.
-set JAVA_OPTS=-Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=%DEBUG_PORT%
+if "%BAL_JAVA_DEBUG%"=="" goto noDebugPort
+if not "%JAVA_OPTS%"=="" echo Warning !!!. User specified JAVA_OPTS will be ignored, once you give the BAL_JAVA_DEBUG variable.
+set JAVA_OPTS=-Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=%BAL_JAVA_DEBUG%
 echo Please start the remote debugging client to continue...
 goto runServer
 
 :noDebugPort
-echo Please specify the debug port after the --java.debug option
+echo Please specify the debug port for the BAL_JAVA_DEBUG variable
 goto end
 
 :doneStart
@@ -113,19 +101,15 @@ set CMD=RUN %*
 :checkJdk8AndHigher
 set JVER=
 for /f tokens^=2-5^ delims^=.-_^" %%j in ('"%JAVA_HOME%\bin\java" -fullversion 2^>^&1') do set "JVER=%%j%%k"
-set JAVA_MODULES=
-rem In, JDK9 or above need to import 'java.corba' module
-if %JVER% GEQ 90 set JAVA_MODULES="--add-modules java.corba"
-if %JVER% GEQ 18 goto jdk8AndHigher
+if %JVER% EQU 18 goto jdk8
 goto unknownJdk
 
 :unknownJdk
-echo Ballerina is supported only on JDK 1.8 and above
+echo Ballerina is supported only on JDK 1.8
 goto end
 
-:jdk8AndHigher
+:jdk8
 goto runServer
-
 
 rem ----------------- Execute The Requested Command ----------------------------
 
@@ -137,7 +121,7 @@ rem ---------- Add jars to classpath ----------------
 
 set BALLERINA_CLASSPATH=.\bre\lib\bootstrap;%BALLERINA_CLASSPATH%
 
-set CMD_LINE_ARGS=-Xbootclasspath/a:%BALLERINA_XBOOTCLASSPATH% -Xms256m -Xmx1024m -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath="%BALLERINA_HOME%\heap-dump.hprof"  -Dcom.sun.management.jmxremote -classpath %BALLERINA_CLASSPATH% %JAVA_OPTS% -Dballerina.home="%BALLERINA_HOME%"  -Djava.command="%JAVA_HOME%\bin\java" -Djava.opts="%JAVA_OPTS%" -Denable.nonblocking=false -Dfile.encoding=UTF8 -Dballerina.version=${project.version} -Djava.util.logging.config.class="org.ballerinalang.logging.util.LogConfigReader" -Djava.util.logging.manager="org.ballerinalang.logging.BLogManager" %JAVA_MODULES%
+set CMD_LINE_ARGS=-Xbootclasspath/a:%BALLERINA_XBOOTCLASSPATH% -Xms256m -Xmx1024m -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath="%BALLERINA_HOME%\heap-dump.hprof"  -Dcom.sun.management.jmxremote -classpath %BALLERINA_CLASSPATH% %JAVA_OPTS% -Dballerina.home="%BALLERINA_HOME%"  -Djava.command="%JAVA_HOME%\bin\java" -Djava.opts="%JAVA_OPTS%" -Denable.nonblocking=false -Dfile.encoding=UTF8 -Dballerina.version=${project.version} -Djava.util.logging.config.class="org.ballerinalang.logging.util.LogConfigReader" -Djava.util.logging.manager="org.ballerinalang.logging.BLogManager"
 
 
 :runJava
